src/app/quizpage/quizpage.component.css
main {
  padding-top: 10px;
  display: flex;
  align-items: center;
  flex-direction: column;
  height: calc(100vh - 60px);
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url("../../assets/pokemon-nature-background-2.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: center bottom;
  overflow: hidden;
}

#scoreBox {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  text-align: center;
}

#pokemonCounter,
#wrongAnswerCounter {
  margin: 10px;
  padding: 5px 10px;
  font-weight: bold;
}

#pokemonCounter {
  background: #6fcb3f;
}

#wrongAnswerCounter {
  background: #de4841;
}

.number {
  display: block;
}

#questionContainer {
  background: white;
  box-shadow: 0px 0px 10px 0px #000000;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 15px;
  padding: 15px 10px;
  width: 80%;
  /* height: 20%; */
}

#question {
  margin: 0;
}

#questionForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

#choicesContainer {
  font-size: 14px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px 0;
  width: 75%;
}

input[type="radio"] {
  display: none;
}

#answerChoiceLabel {
  margin: 2px;
  padding: 5px 40px;
  width: 100%;
}

#answerChoiceLabel:hover {
  background: lightgrey;
  padding: 5px 40px;
  width: 100%;
}

input[type="radio"]:checked+#answerChoiceLabel {
  background: rgba(128, 128, 128, 0.692);
  padding: 5px 40px;
  width: 100%;
}

#pokemonImageContainer {
  margin-top: 5%;
  position: fixed;
  bottom: -10px;
}

#pokemonImage {
  position: relative;
  height: 290px;
}

#pokeball {
  position: absolute;
  border-radius: 50%;
  height: 50px;
  bottom: 50%;
  right: 35%;
  transform: translate(50%, -100%);
  box-shadow: 0px 0px 25px 20px rgb(212, 175, 55)
}

#throwButton {
  cursor: pointer;
  display: flex;
  align-items: center;
  font-weight: bold;
  justify-content: center;
  padding: 5px 10px;
}

#throwButton img {
  height: 20px;
  margin-right: 5px;
}

#correctAnswer,
#caughtAlert {
  padding: 10px;
  margin-top: 10px;
}

#caughtAlert {
  background: rgba(144, 238, 144, 0.712);
}

#correctAnswer {
  background: rgba(222, 73, 65, 0.712);
}

#correctAnswer p,
#caughtAlert p {
  margin: 0;
  font-weight: bold;
}

#answer {
  display: block;
  font-style: italic;
  font-weight: normal;
}

#pokemonName {
  font-style: italic;
  text-transform: capitalize;
}

/* Media queries */

@media only screen and (min-width: 800px) {
  main {
    background-attachment: fixed;
    background-position: center bottom;
  }

  form {
    width: 90%;
  }

  #choicesContainer {
    font-size: 14px;
    flex-direction: row;
    align-items: center;
    margin: 10px 0;
    width: 100%;
  }

  #answerChoiceLabel {
    margin: 5px;
    padding: 10px 15px;
  }

  #answerChoiceLabel:hover {
    background: lightgrey;
    padding: 10px 15px;
  }

  input[type="radio"]:checked+#answerChoiceLabel {
    background: rgba(128, 128, 128, 0.692);
    padding: 10px 15px;
  }
}

@media only screen and (min-width: 1100px) {
  #choicesContainer {
    flex-direction: row;
    align-items: center;
    margin: 10px 0;
    width: 70%;
  }
}

